linked companies, vertical alignment fixes

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -4,7 +4,7 @@
     .job {
         display: grid;
         grid-column-gap: 20px;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 4fr;
         margin-bottom: $measure;
 
         @media screen and (max-width: $breakpoint-small) {
@@ -65,6 +65,8 @@
 
     h3 {
         margin: 0;
+        font-size: 1em;
+        font-weight: 400;
     }
 
 }
